# petrol

./: .gitattributes  .gitignore  Cl.ipynb  configs.py  data.py  db.sqlite3  instruction.md  main.ipynb  mlflow.db  pyproject.toml  train.ipynb  train.py  utils.py
.dvc/: config
configs/: catboost.yml  lightgbm_conf.yml
core/: configs.py  data.py  dataset_parser.py  prep_raw_data.py  temp.ipynb  train.py
core/parser/: base.py  dataset1250.py  dataset2500.py  dataset4000_line1.py  dataset4000_line2.py
data/: without_recovery.csv
data/preprocessed/: 2021_жестко_почищенный_вилкой.csv  2022_1250_joined_vlagomer.csv  2022_1250_scaled.csv  2023_1250_joined_vlagomer.csv  2023_1250_scaled.csv  data_2022.csv  df_with_lag.csv  filled_outliers.csv  filled_outliers_lag-1.csv  filled_outliers_lag0.csv  filled_outliers_lag1.csv  full_df.csv  lagged-1_joined_datetime.csv
data/raw/: 1250_2022_vlagomer.csv  flattened_manual_recovered.xlsx  МУИС_Базовая_выборка_автоматизированных_измерений_для_ИНС.xlsx  Режимный лист МУИС 2022.xlsx1250_clear.csv  Ручные_измерения.csv
mlruns/0/: meta.yaml
mlruns/321165878876440937/: meta.yaml
noteboooks/: 2022.ipynb  2023.ipynb  EDA.ipynb
pipelines/: Makefile
piplines/: Makefile
plots/: corr_matrix.html  corr_matrix_with_filled_outliers.html  corr_matrix_with_orig_columns.html  corr_matrix_with_smoothed.html  ебейшая_scatter_matrix0.html  ебейшая_scatter_matrix10.html  ебейшая_scatter_matrix20.html  ебейшая_scatter_matrix30.html  ебейшая_scatter_matrix40.html  печки_corr_matrix.html  печки_scatter_matrix.html
(+410 files in other folders)
