[tool.poetry]
name = "petrol"
version = "0.1.0"
description = ""
authors = ["luzinsan  <luzinsan.a.430-2@e.tusur.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
notebook = "^7.1.2"
ydata-profiling = "^4.7.0"
openpyxl = "^3.1.2"
torch = "^2.2.2"
plotly = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
