[tool.poetry]
name = "petrol"
version = "0.1.0"
description = ""
authors = ["luzinsan  <luzinsan.a.430-2@e.tusur.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
notebook = "^7.1.2"
ydata-profiling = "^4.7.0"
openpyxl = "^3.1.2"
plotly = "^5.20.0"
catboost = "^1.2.3"
scikit-learn = "^1.4.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
cudf-cu12 = "^24.4.0"
cuml-cu12 = "^24.4.0"
pandarallel = "^1.6.5"
lightgbm = "^4.3.0"
optuna = "^3.6.1"
optuna-dashboard = "^0.15.1"
statsmodels = "^0.14.2"
phik = "^0.12.4"
mlflow = "^2.12.1"
dvc = "^3.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
